@@ -1,3 +1,8 @@
+2004-01-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/13392
+	* g++.dg/opt/expect2.C: New test.
+
 2003-12-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20031202-1.c: New test.
