@@ -1,3 +1,10 @@
+2004-01-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/13392
+	* builtins.c (expand_builtin_expect_jump): Handle conditional jumps
+	to drop through label.  Don't fall back to SCC even when conditional
+	jump has not been found.
+
 2003-12-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* expr.c (store_constructor): Only set RTX_UNCHANGING_P for
